fix header z-index

--- a/2 task/src/components/Header/Header.module.scss
+++ b/2 task/src/components/Header/Header.module.scss
@@ -6,6 +6,7 @@
     position: relative;
     height: 74px;
     transition: .5s;
+    z-index: 99;
 
     @media screen and (max-width: $m_550) {
         height: 92px;
